--- a/Dockerfile.stage
+++ b/Dockerfile.stage
@@ -3,16 +3,16 @@ FROM node:16-alpine AS development
 
 WORKDIR /app
 ENV PATH /app/node_modules/.bin:$PATH
+ENV NODE_ENV development
 
-COPY tsconfig*.json ./
-COPY package*.json ./
+COPY package.json /app/package.json
+COPY dist/ /app
 
-RUN npm install
-
-COPY src/ src/
+RUN npm install --no-audit
 
 RUN chown -R node /app/node_modules
 
 USER node
 
 EXPOSE 8080
+CMD [ "app.js" ]
