--- a/docker-compose-stage.yml
+++ b/docker-compose-stage.yml
@@ -12,8 +12,8 @@ services:
       HOST_SMTP: ${HOST_SMTP}
       MARTE_EMAIL: ${MARTE_EMAIL}
       MARTE_PASS: ${MARTE_PASS}
-      MARTE_API: https://mars.nasa.gov/rss/api/?feed=weather&category=msl&feedtype=json
-      JWT_PASS: f58SZ3XvGvkvea2CQRLwKHNJHx4CLFNvLLqtXXyKAmBIYWMVcYUK27TAndRb4nsu
+      MARTE_API: ${MARTE_API}
+      JWT_PASS: ${JWT_PASS}
       NODE_ENV: development
       SERVER_PORT: 4444
       DB_DATABASE: orion
