--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "license": "ISC",
   "scripts": {
     "start:dev": "npx nodemon -L",
-    "build:stage": "npx tsc --build",
+    "build:stage": "npx tsc --build && npm run copy-templates",
+    "copy-templates": "ncp src/templates dist/templates",
     "build": "npm run lint && npx tsc",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\"",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -38,6 +39,7 @@
     "handlebars": "^4.7.8",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.2",
+    "ncp": "^2.0.0",
     "nodemailer": "^6.9.7",
     "reflect-metadata": "^0.1.13",
     "swagger-jsdoc": "^6.2.8",
